bug fixed= freidge ingredients aligned vertically not horizontally, wrong css pathway again from when i chnaged earlier

--- a/style-fridge.css
+++ b/style-fridge.css
@@ -14,7 +14,6 @@ h1 {
 
 .ingredient-shelf {
     display: flex;
-    flex-wrap: wrap; 
     justify-content: center; 
     align-items: center; 
 }
